--- a/WebContent/SelectManager.xhtml
+++ b/WebContent/SelectManager.xhtml
@@ -18,7 +18,7 @@
 </h:head>
 <h:body>
 	<c:choose>
-		<c:when test="#{sessionScope.emailId == null}">
+		<c:when test="#{sessionScope.userName == null}">
 			<h2>Please login</h2>
 		</c:when>
 		<c:otherwise>
