--- a/WebContent/Stock.xhtml
+++ b/WebContent/Stock.xhtml
@@ -18,11 +18,12 @@
 </h:head>
 <h:body>
 	<c:choose>
-		<c:when test="#{sessionScope.emailId == null}">
+		<c:when test="#{sessionScope.userName == null}">
 			<h2>Please login</h2>
 		</c:when>
 		<c:otherwise>
 			<h:form>
+			<h1>#{sessionScope.userName}</h1>
 				<h1>Stocks</h1>
 				<h:dataTable value="#{stockBean.priceLi}" var="stock" border="2">
 					<h:column>
